src/test/ui/block-result/block-must-not-have-result-while.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-while.rs:13:9
   |
13 |         true //~  ERROR mismatched types
   |         ^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
